added devise User Home Recipe Ingredients

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,56 @@
  *= require_tree .
  *= require_self
  */
+ body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Courier New', Courier, monospace;
+}
+a {
+    cursor:pointer;
+}
+header {
+   position: fixed;
+   top: 0;
+   z-index: 1000;
+   width: 100%;
+   background: #eee1aa;
+}
+
+.content {
+   padding-top: 40mm;
+   margin-bottom: 30mm;
+   height: 150vh;
+   background: #fff;
+}
+@media screen and (max-width: 1280px) {
+   .nav-container {
+       width: 100%;
+   }
+}
+@media screen and (max-width: 768px) {
+   .tab-nav-label {
+       display: grid;
+       cursor: pointer;
+       grid-column: 3;
+       padding-right: 10px;
+   }
+   .tab-content {
+       display: grid;
+       grid-template-columns: 1fr;
+       grid-column: 1/4;
+       text-align: center;
+       max-height: 0;
+       overflow: hidden;
+       transition: all ease-in-out 0.4s;
+       -o-transition: all ease-in-out 0.4s;
+       -webkit-transition: all ease-in-out 0.4s; 
+   }
+   .nav-checkbox input:checked ~ .tab-content {
+       max-height: 400px;
+   }
+   .tab-content li {
+       padding: 10px 0;
+   }
+}
