--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,7 +5,7 @@
         <label for="tab-nav" class="tab-nav-label">Menu</label>
         <ul class="tab-content">
             <% if user_signed_in? %>
-                <li class="nav-item">Welcome <%= current_user.first_name%></li>
+                <li class="nav-item">Welcome <%= current_user.name%></li>
                 <li></li>
                 <li class="nav-item"><%= button_to "Edit User", edit_user_registration_path, :method => :get %></li>
                 <li class="nav-item"><%= button_to "Sign Out", destroy_user_session_path, :method => :delete %></li>
