changed user_id in recipies and recipe_id in ingredients to foreign_keys and added index I found so that duplicates cannot be created for a users

--- a/app/views/recipies/_form.html.erb
+++ b/app/views/recipies/_form.html.erb
@@ -1,5 +1,6 @@
 <%= form_for @recipe doe |f| %>
  Name: <%= f.text_field :name, required: true%>
+ Description: <% f.text_area :description %>
  Category: <%= f.select(:category, Recipie::Category) %>
  Directions: <% f.text_area :directions, %>
  <%= f.fields_for :ingredients do |i| %>
