--- a/app/views/recipies/_form.html.erb
+++ b/app/views/recipies/_form.html.erb
@@ -1,11 +1,13 @@
-<%= form_for @recipe doe |f| %>
+<%= form_for @recipe do |f| %>
  Name: <%= f.text_field :name, required: true%>
  Description: <% f.text_area :description %>
- Category: <%= f.select(:category, Recipie::Category) %>
+ Category: <%= f.select(:category, Recipe::Category) %>
  Directions: <% f.text_area :directions, %>
  <%= f.fields_for :ingredients do |i| %>
-    <%= i.text_field :name%>
-    <%= i.text_field :amount%> "  " <%= i.select(:category, Ingredient::Measure) %>
+    <%=render 'ingredient_fields', f: i %>
  <% end %>
+ <%= link_to_add_fields "Add Ingredients", f, ingredients%>
  <% submit_tag "Add Recipe"%>
+ 
 <% end %>
+
